2010-05-24  Andreia Gaita  <avidigal@novell.com>

	* ScriptObject.cs: Add a weak reference object cache for all script
	  objects so there's only one object per handle (drt 981)

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* ScriptObject.cs (GetPropertyInternal<V>): don't leak Values.
	(SetPropertyInternal): same.
	(InvokeInternal<T>): same.

2010-05-04  Jeffrey Stedfast  <fejj@novell.com>

	* HtmlPage.cs (.ctor): Don't call
	moonlight_scriptable_object_register() with a null PluginHost.

	* ScriptObject.cs (SetDefaultHandle): Don't call
	moonlight_scriptable_object_create() with a null PluginHost.

2010-04-23  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserInformation.cs: Add new Product[Name|Version] properties
	(SL4)

2010-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* HtmlPage.cs: IsEnabled: return false in when running out of browser.

2010-03-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ScriptObject.cs: Refactor constructors to avoid the default 
	.ctor needing a [SecuritySafeCritical] attribute and respect
	coreclr inheritance rules.

2010-03-17  Chris Toshok  <toshok@ximian.com>

	* HtmlDocument.cs (CreateElement): use InvokeInternal<HtmlElement>
	instead of possibly passing IntPtr.Zero to HtmlElement's ctor.
	(GetElementById): replace the IntPtr munging here with
	InvokeInternal<HtmlElement> and let ScriptObjctHelper do the heavy
	lifting.

	* HtmlElement.cs (Parent): same.

	* ScriptObjectCollection.cs (get_Item): same.

2010-03-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* HtmlElement.cs: If we don't have a parent, return null instead of a
	HtmlElement with a zero native pointer.

2010-03-10  Andreia Gaita  <avidigal@novell.com>

	* HtmlEventArgs.cs: Fix the mouse button mapping from the
	browser 'button' arg to the MouseButtons enum

2010-03-09  Alan McGovern  <amcgovern@novell.com>

	* HtmlWindow.cs: Add support for DeepLinking. It works for my
	  (trivial) testcases. Basically the only change we appear to