@@ -1,3 +1,7 @@
+2010-05-26  Andreia Gaita  <avidigal@novell.com>
+
+	* ScriptObject.cs: Add needed locks
+
 2010-05-24  Andreia Gaita  <avidigal@novell.com>
 
 	* ScriptObject.cs: Add a weak reference object cache for all script
